# streamlit-perspective

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: static.py
examples/websocket/: app.py  server.py
src/streamlit_perspective/: __init__.py  _component.py  pyproject.toml  static.py  websocket.py
src/streamlit_perspective/frontend/: package-lock.json  package.json  vite.config.ts
src/streamlit_perspective/frontend/src/: index.ts  styles.css
